fixed footer logo not being centered; added css styling to html and body to fix white bar on rightside of page; pinterest icon not showing up on footer

--- a/resources/style.css
+++ b/resources/style.css
@@ -1,6 +1,11 @@
-body{
+html, body{
     font-family: 'Barlow', sans-serif;
     font-size: 18px;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
 }
 
 .fraunces {
@@ -105,19 +110,21 @@ h1 {
 /* Footer */ 
 footer {
     background-color: hsl(168, 34%, 41%);
-    color: hsl(167, 40%, 24%);
+    width: 100%;
 }
 
-.footer-logo{
-    margin-left: auto;
-    margin-right: auto;
+.footer-logo {
+    display: block;
+    margin: auto;
     padding: 20px;
 }
 
-.footer-nav, .socials {
+.footer-nav a{
     color:hsl(167, 40%, 24%);
-    display: flex;
-    justify-content: space-around;
     margin: 20px;
+    padding: 20px;
+}
+
+.socials {
     padding: 20px;
 }
